# hacspec-rust

./: Cargo.toml  LANGUAGE.md  README.md  aliases.js  search-index.js  settings.html  source-files.js
abstract_integers/: all.html  index.html  macro.define_abstract_integer_checked.html  macro.define_refined_modular_integer.html  sidebar-items.js  struct.SizeNatExample.html  struct.SizeNatFieldExample.html  trait.Integer.html
common/: all.html  fn.build_struct.html  fn.impl_struct_common.html  index.html  sidebar-items.js
docs/: .gitignore  formalization.tex  rustspec.bib
hacspec/: all.html  fn.div_ceil.html  fn.from_u32l.html  fn.get_random_bytes.html  fn.hex_string_to_bytes.html  fn.to_array.html  fn.to_u32l.html  fn.u128_from_be_bytes.html  fn.u128_from_le_bytes.html  fn.u128_to_be_bytes.html  fn.u32_from_be_bytes.html  fn.u32_from_le_bytes.html  fn.u32_from_le_bytes_u32.html  fn.u32_to_be_bytes.html  fn.u32_to_le_bytes.html  fn.u64_slice_to_le_u8s.html  fn.u64_to_be_bytes.html  fn.u64_to_be_bytes_u64.html  fn.u64_to_le_bytes.html  index.html  macro.array.html  macro.array_base!.html  macro.array_base.html  macro.assert_bytes_eq.html  macro.assert_secret_array_eq.html  macro.both_arrays.html  macro.both_bytes.html  macro.bytes.html  macro.field_integer.html  macro.hacspec_crates!.html  macro.hacspec_crates.html  macro.hacspec_imports!.html  macro.hacspec_imports.html  macro.poly.html  macro.poly_n!.html  macro.poly_n.html  macro.poly_n_m!.html  macro.poly_n_m.html  macro.public_array!.html  macro.public_array.html  (+22 more)
num/: all.html  fn.cast.html  fn.clamp.html  (+28 more)
(+569 files in other folders)
