[package]
name = "hacspec"
version = "0.1.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
description = "A set of tools to write succinct crypto specs."
license = "Apache-2.0"

[dependencies]
rand = "0.7" # ok?
wrapping_arithmetic = "0.1"
num = "0.2"
paste = "0.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
uint = { git = "https://github.com/franziskuskiefer/rust-uint-n" }

[dev-dependencies]
# uint = { path = "../uint_n" }
