[package]
name = "hacspec"
version = "0.1.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
description = "A set of tools to write succinct crypto specs."
license = "Apache-2.0"

[dependencies]
rand = "0.7"
num = "0.2"
secret_integers = "0.1.6"
abstract_integers = "0.1.2"
