[package]
name = "hacspec"
version = "0.1.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
description = "A set of tools to write succinct crypto specs."
license = "Apache-2.0"

[dependencies]
rand = "0.7"
num = "0.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
# secret_integers = { git = "https://github.com/hacspec/rust-secret-integers" }
# abstract_integers = { git = "https://github.com/hacspec/rust-abstract-integers" }

# Local dependencies for development
secret_integers = { path = "../rust-secret-integers" }
abstract_integers = { path = "../rust-abstract-integers" }
